objects/Bike__c.object
<CustomObject>
    <fields>
        <fullName>Bike_No__c</fullName>
        <label>Bike No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <label>Customer Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Model Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Bike</label>
    <nameField>
        <label>Bike Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bikes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>